--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,57 @@
 }
 /* COMMON */
 body{
-    /* TEST */
-    background-color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+}
+img{
+    width: 100%;
 }
 .contenitore{
     width: 80%;
     margin: auto;
     margin-top: 50px;
-    /* TEST */
-    background-color: blueviolet;
+}
+.pos-rel{
+    position: relative;
+}
+.pos-abs{
+    position: absolute;
 }
 .listino-prodotti{
-    width: 80%;    
-    background-color: red;
+    
+    width: 99%;    
+   
 }
 .prodotto{
     display: inline-block;
-    width: 100px;
-    height: 100px;
-    background-color: chocolate;
+    width: 32%;
+    
 }
+.icona-cuore{
+    right: 0;
+    top: 3%;
+    font-size: 35px;
+    padding: 15px;
+    background-color: white;
+    
+}
+.sconto{
+    left: 0;
+    bottom: 3%;
+    padding:8px;
+    background-color: #eb0037;
+    color: white;
+    font-weight: bolder;
+}
+.attributo{
+    left: 15%;
+    bottom: 3%;
+    padding: 8px;
+    background-color: #00875a;
+    color: white;
+    font-weight: bolder;
+}
+
+
    
     
