Definite le scritte e commentato css

--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,12 @@ img{
     font-weight: bolder;
 
 }
+/* .img1, .img-hide{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+} */
+/* .img1:hover {
+    display: none;
+    
+} */
